<resources>
    <string name="app_name">Covidd_Encyclopedia</string>
    <string name="connecter">Connecter</string>
    <string name="s_inscrire">s\'inscrire</string>
    <string name="mot_de_passe_oubli_e">Mot de passe oubliée?</string>
    <string name="email">Email</string>
    <string name="nom">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="confirmer_mot_de_passe">Confirmer mot de passe</string>
    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>
    <string name="restauration">Restauration</string>
    <string name="entrer_votre_email">Entrer votre email</string>
    <string name="restaurer">Restaurer</string>
    <string name="accueil">Accueil</string>
    <string name="profile">Profile</string>
    <string name="a_propos">A propos</string>
    <string name="param_tres">Paramètres</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="utilisateur">Utilisateur</string>
    <string name="utilisateur_gmail_com">Utilisateur@gmail.com</string>
    <string name="adresse_rue_ville">Adresse : Rue/Ville</string>
    <string name="contact_facebook_com">Contact: Facebook.com</string>
    <string name="retourne">Retourne</string>
    <string name="contact">Contact</string>
    <string name="application_mobile_qui_r_pond_vos_questions_sur_le_covid_19_tout_savoir_sur_la_pand_mie_de_coronavirus_qui_a_d_j_fait_des_millions_de_morts_dans_le_monde">Application mobile qui répond à vos questions sur le Covid - 19, tout savoir sur la pandémie de coronavirus qui a déjà fait des millions de morts dans le monde</string>
</resources>