<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/circle"
        android:contentDescription="TODO" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:textSize="20dp"
        android:drawableLeft="@drawable/ic_action_user"
        android:background="#11000000"
        android:inputType="textPersonName"
        android:hint="@string/utilisateur" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editTextTextPersonName2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textSize="20dp"
        android:drawableLeft="@drawable/ic_action_pass"
        android:background="#11000000"
        android:inputType="textPassword"
        android:hint="@string/mot_de_passe" />

    <Button
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/connecter"
        android:layout_centerInParent="true"
        android:textSize="20dp"
        android:background="@color/white"
        android:textColor="#fff"
        android:layout_below="@+id/editTextTextPersonName3"
        android:layout_marginTop= "30dp"
        />
    <Button
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/s_inscrire"
        android:layout_marginTop="10dp"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:textColor="#fff"/>
    <Button
        android:id="@+id/buy"
        android:layout_width="wrap_content"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/mot_de_passe_oubli_e"
        android:layout_marginTop="10dp"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:textColor="#fff"/>


</RelativeLayout>