<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Inscription">

    <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:text="S'inscrire"
        android:layout_marginTop="72dp"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_action_email"
        android:hint="@string/email"
        android:textSize="22dp"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="40dp"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="147dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/utilisateur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="22dp"
        android:hint="Utilisateur"
        android:layout_below="@+id/email"
        android:drawableLeft="@drawable/ic_action_user"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="238dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@+id/utilisateur"
        android:hint="@string/nom"
        android:textSize="22dp"
        android:drawableLeft="@drawable/ic_action_nom"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="334dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/prenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/pr_nom"
        android:textSize="22dp"
        android:layout_below="@+id/nom"
        android:drawableLeft="@drawable/ic_action_prenom"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="334dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/mot_de_passe"
        android:layout_below="@+id/prenom"
        android:drawableLeft="@drawable/ic_action_motpass"
        tools:layout_editor_absoluteX="43dp"
        android:textSize="22dp"
        tools:layout_editor_absoluteY="511dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="22dp"
        android:layout_below="@+id/password"
        android:inputType="textPassword"
        android:hint="@string/confirmer_mot_de_passe"
        android:drawableLeft="@drawable/ic_action_confir"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="602dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/valider"
        android:textSize="17dp"
        android:layout_below="@+id/confirm"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        tools:layout_editor_absoluteX="61dp"

        tools:layout_editor_absoluteY="677dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/annuler"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="515dp"
        android:layout_marginEnd="30dp"
        android:textSize="18dp"
        android:layout_marginStart="500dp"
        tools:layout_editor_absoluteX="238dp"

        tools:layout_editor_absoluteY="677dp"
        tools:ignore="MissingConstraints" />
    </com.google.android.material.textfield.TextInputLayout>
</RelativeLayout>